src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__literal_boolean.snap
---
source: src/passes/hir_gen/mod.rs
expression: Literal(Boolean(true))
---
Expression {
    id: HirId(
        0,
    ),
    kind: Literal(
        Boolean(
            true,
        ),
    ),
}
