src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__literal_integer.snap
---
source: src/passes/hir_gen/mod.rs
expression: Literal(Integer(123))
---
Expression {
    id: HirId(
        0,
    ),
    kind: Literal(
        Integer(
            123,
        ),
    ),
}
