src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__tuple_many.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Tuple(Tuple { values: [ExpressionId(1), ExpressionId(2)] })"
---
Aggregate(
    Aggregate {
        values: [
            ExpressionId(
                0,
            ),
            ExpressionId(
                1,
            ),
        ],
    },
)
