src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__unary_simple.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Unary(Unary { operation: Negative, value: ExpressionId(0) })"
---
Expression {
    id: HirId(
        1,
    ),
    kind: Unary(
        Unary {
            operation: Negative,
            value: ExpressionId(
                0,
            ),
        },
    ),
}
