src/passes/hir_gen/snapshots/lumina2__passes__hir_gen__test__variable_simple.snap
---
source: src/passes/hir_gen/mod.rs
expression: "Variable(Variable { variable: StringId(0) })"
---
Variable(
    Variable {
        binding: BindingId {
            id: InnerBindingId(
                0,
            ),
            kind: PhantomData<fn() -> lumina2::util::scopes::Identifier>,
        },
    },
)
